--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-streamlit>=1.37
-Pillow>=10
-img2pdf>=0.4.4
-pypdf>=4.2
-pymupdf==1.24.10
-pikepdf==9.2.1
-pdf2docx>=0.5.6
-streamlit-drawable-canvas
+Flask==3.0.3
+gunicorn==21.2.0
+pypdf==4.2.0
+pymupdf==1.24.8
+Pillow==10.4.0
+pdf2docx==0.5.8
+python-docx==1.1.2
+reportlab==4.2.0
+pandas==2.2.2
+openpyxl==3.1.5
+python-pptx==0.6.23
+pypandoc==1.13
