--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 Flask==3.0.3
 gunicorn==21.2.0
 pypdf==4.2.0
-pymupdf==1.24.8
+PyMuPDF==1.24.9
 Pillow==10.4.0
 pdf2docx==0.5.8
 python-docx==1.1.2
-reportlab==4.2.0
-pandas==2.2.2
-openpyxl==3.1.5
+reportlab==4.2.2
 python-pptx==0.6.23
-pypandoc==1.13
