--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Flask==3.0.3
 gunicorn==21.2.0
+Werkzeug==3.1.3
+
+# Main app deps
 pypdf==4.2.0
 PyMuPDF==1.24.9
 Pillow==10.4.0
@@ -8,3 +11,9 @@ python-docx==1.1.2
 reportlab==4.2.2
 python-pptx==0.6.23
 
+# QR app deps
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.36
+qrcode[pil]==7.4.2
+python-slugify==8.0.4
